--- a/address-book.html
+++ b/address-book.html
@@ -28,6 +28,10 @@
             <div id="new-addresses">
               <div class="new-address">
                 <div class="form-group">
+                  <label for="new-addressType">Type of Address</label>
+                  <input type="text" class="form-control new-addressType">
+                  </div>
+                  <div class="form-group">
                   <label for="new-street">Street</label>
                   <input type="text" class="form-control new-street">
                 </div>
