--- a/address-book.html
+++ b/address-book.html
@@ -48,7 +48,7 @@
 
             <span class="btn btn-primary" id="add-address">Another address</span>
 
-            <button type="submit" class="btn">Add</button>
+            <button type="submit" class="btn add-button">Add</button>
           </form>
 
           <h2>Contacts:</h2>
